Add demande et competence requise
