# src/main/java/fr/pmu/matrix/competence/dto/CompetenceRequiseDto.java
@@ -1,0 +1,9 @@
+package fr.pmu.matrix.competence.dto;
+
+import lombok.Data;
+
+@Data
+public class CompetenceRequiseDto {
+    private String competenceLibelle;
+    private int noteValeur;
+}
